--- a/src/assets/css/styles.scss
+++ b/src/assets/css/styles.scss
@@ -1,4 +1,15 @@
+@import './mui/all.css';
+
 /* You can add global styles to this file, and also import other style files */
+* {
+  box-sizing: border-box;
+}
+
+html,
 body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
   font-family: Roboto, sans-serif;
+  background: white;
 }
