beginning style overhaul

--- a/src/assets/css/styles.scss
+++ b/src/assets/css/styles.scss
@@ -1,5 +1,6 @@
 @import './vars.scss';
 @import './mui/all.css';
+@import './kendo/kendo-overrides.scss';
 
 /* You can add global styles to this file, and also import other style files */
 * {
