--- a/src/assets/css/kendo/overrides/tab-panel.scss
+++ b/src/assets/css/kendo/overrides/tab-panel.scss
@@ -65,7 +65,13 @@
   //   font-weight: bolder;
   //   color: $primary;
   // }
+  .k-link {
+    padding: 7px 12px;
+  }
 }
+// .k-tabstrip-items .k-link {
+//   padding: 7px 12px;
+// }
 
 .tabContent {
   display: flex;
