--- a/src/assets/css/vars.scss
+++ b/src/assets/css/vars.scss
@@ -7,6 +7,7 @@ $secondary-2: rgba($secondary, .65);
 $secondary-3: rgba($secondary, .55);
 
 $font-family: Roboto,"Helvetica Neue",sans-serif;
+$font-size: .8rem;
 $primary-text: white;
 
 /*  Header  */
