--- a/src/assets/css/styles.scss
+++ b/src/assets/css/styles.scss
@@ -1,8 +1,8 @@
+@import '@progress/kendo-theme-default/dist/all.scss';
 @import './vars.scss';
-@import './mui/all.css';
 @import './kendo/kendo-overrides.scss';
 
-/* You can add global styles to this file, and also import other style files */
+
 * {
   box-sizing: border-box;
 }
@@ -15,4 +15,10 @@ body {
   font-family: $font-family;
   font-size: $font-size; 
   background: $content-bg-color;
+}
+
+router-outlet+* {
+  display: flex;
+  flex: 1 1 auto;
+  height: 100%;
 }
