--- a/src/modules/ghp-common/pages/gallery/tabs/sandbox/component-sandbox.scss
+++ b/src/modules/ghp-common/pages/gallery/tabs/sandbox/component-sandbox.scss
@@ -1,9 +1,34 @@
 component-sandbox {
   display: flex;
   flex: 1 1 auto;
+  padding: 25px 50px;
+}
+
+.sandbox-subject {
+  min-height: 250px;
+  min-width: 500px;
+  background-color: #222;
+  border-radius: 5px;
+  padding: 3px;
+}
+
+$check-color: #AFAFAF;
+
+.display-port {
+  display: flex;
+  flex: 1 1 auto;
   height: 100%;
-  // margin: auto;
-  background-image: linear-gradient(45deg, #808080 25%, transparent 25%), linear-gradient(-45deg, #808080 25%, transparent 25%), linear-gradient(45deg, transparent 75%, #808080 75%), linear-gradient(-45deg, transparent 75%, #808080 75%);
+  background-color: white;
+  border-radius: 3px;
+  background-image:
+    linear-gradient(45deg, $check-color 25%, transparent 25%),
+    linear-gradient(-45deg, $check-color 25%, transparent 25%),
+    linear-gradient(45deg, transparent 75%, $check-color 75%),
+    linear-gradient(-45deg, transparent 75%, $check-color 75%);
   background-size: 20px 20px;
   background-position: 0 0, 0 10px, 10px -10px, -10px 0px;
+}
+
+.sandbox-item {
+  margin: auto;
 }
