added Label to textbox

--- a/src/assets/css/vars.scss
+++ b/src/assets/css/vars.scss
@@ -32,3 +32,6 @@ $drawer-wrapper-border-right: 1px solid $drawer-border-color;
 
 /*  main content  */
 $content-bg-color: white;
+
+/* Forms */
+$formFontSize: .8rem;
