--- a/src/modules/ghp-common/components/textbox/textbox.html
+++ b/src/modules/ghp-common/components/textbox/textbox.html
@@ -1,4 +1,5 @@
 <form [formGroup]="formGroup">
+  <genesis-label [Label]="Label"></genesis-label>
   <input
     [formControlName]="controlName"
     kendoTextBox />
