--- a/src/modules/ghp-common/pages/gallery/gallery-page.scss
+++ b/src/modules/ghp-common/pages/gallery/gallery-page.scss
@@ -1,1 +1,11 @@
 @import '../../assets/scss/common.scss';
+
+gallery-page {
+  display: flex;
+  flex: 1 1 auto;
+  height: 100%;
+
+  .k-content {
+    background-color: #222 !important;
+  }
+}
