--- a/src/modules/ghp-common/pages/gallery/gallery-page.scss
+++ b/src/modules/ghp-common/pages/gallery/gallery-page.scss
@@ -4,8 +4,8 @@ gallery-page {
   display: flex;
   flex: 1 1 auto;
   height: 100%;
-
-  .k-content {
-    background-color: #222 !important;
-  }
+  
+  // .k-content {
+  //   background-color: #222 !important;
+  // }
 }
