new card component that I'm happy with

--- a/src/assets/css/vars.scss
+++ b/src/assets/css/vars.scss
@@ -37,5 +37,12 @@ $content-bg-color: white;
 $subtle-border-color: rgba(0, 0, 0, .08);
 $subtle-border: .05rem solid $subtle-border-color;
 
+/*  Card  */
+$card-box-shadow: -3px 3px 6px 1px rgba(0, 0, 0, 0.2);
+$border-radius: 4px;
+
+
+/*  end Card  */
+
 /* Forms */
 $formFontSize: .8rem;
