--- a/src/modules/ghp-common/components/sandbox-window/sandbox-window.html
+++ b/src/modules/ghp-common/components/sandbox-window/sandbox-window.html
@@ -1,9 +1,6 @@
-<!-- <div class="sandbox-toolbar">
-  <div>
-    <span>Palete bg:</span>
-    <input type="checkbox" id="foo" kendoCheckBox />
-  </div>
-</div> -->
+<genesis-toolbar>
+  <div>hello</div>
+</genesis-toolbar>
 <div class="sandbox-subject">
   <div class="display-port">
     <div class="sandbox-item">
