--- a/src/modules/ghp-common/components/card/card.scss
+++ b/src/modules/ghp-common/components/card/card.scss
@@ -1,5 +1,15 @@
 @import '../../assets/scss/common.scss';
 
+@keyframes MinMax {
+  0% {
+    height: 100%;    
+  }
+  100% {
+    height: 0%
+  }
+}
+
+
 .g-card {
   min-width: 300px;
   margin: 10px;
@@ -16,15 +26,17 @@
     background: white;
     border: $subtle-border;
     border-radius: $border-radius;
-    height: 100%;
     margin: 0;
-    transition: height 1.5s;
+    overflow: hidden;
+    // transition: height 1.25s ease-in-out;
   }
 
   .g-content-min {
-    height: 0;
-    overflow: none;
-    display: none;
+    animation: MinMax 2s;
+    
+    // height: 0;
+    // overflow: none;
+    // display: none;
   }
 }
 
