saving work from a few months back

--- a/src/assets/css/vars.scss
+++ b/src/assets/css/vars.scss
@@ -38,6 +38,8 @@ $subtle-border-color: rgba(0, 0, 0, .08);
 $subtle-border: .05rem solid $subtle-border-color;
 
 /*  Card  */
+
+$grid-border-color: rgba(0, 0, 0, 0.08);
 $card-box-shadow: -3px 3px 6px 1px rgba(0, 0, 0, 0.2);
 $border-radius: 4px;
 
@@ -46,3 +48,7 @@ $border-radius: 4px;
 
 /* Forms */
 $formFontSize: .8rem;
+
+
+/* kendo */
+$grid-background-dark: #eeeeee;
